@@ -1,0 +1,2 @@
+<h1>Admin#logout</h1>
+<p>Find me in app/views/admin/logout.html.erb</p>
