@@ -1,4 +1,7 @@
 2009-05-01 Iuri Fernandes <iurifq@gmail.com>
+* Login structure created. Error messages and index are still missing.
+
+2009-05-01 Iuri Fernandes <iurifq@gmail.com>
 * Moved possible 'generos' and 'estados civis" from views to controllers.
 
 2009-05-02 Suzana Matos <suzana.mato@gmail.com>
